# alkali-csd-projects

./: .buildinfo  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  alkali.dockerfile  apu-software.html  architecture.html  flashing-basalt.html  fpga-design.html  genindex.html  host-software.html  index.html  introduction.html  memory-map.html  nvme-commands.html  objects.inv  repositories.html  requirements.txt  rpu-software.html  search.html  searchindex.js  tflite-models.html  vta-accelerator.html  vta-delegated-ops.html
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml  docs.yml
.west/: config
_sources/: apu-software.rst.txt  architecture.rst.txt  flashing-basalt.rst.txt  fpga-design.rst.txt  host-software.rst.txt  index.rst.txt  introduction.rst.txt  repositories.rst.txt  tflite-models.rst.txt  vta-accelerator.rst.txt  vta-delegated-ops.rst.txt
binaries/: fsbl.elf
boards/an300/: Makefile  board.mk  boot.cmd  fsbl.elf  pmufw.elf
boards/basalt/: Makefile  board.mk  pmu.elf  sdcard.mk
boards/zcu106/: Makefile  board.mk  embeddedsw.patch  (+2 more)
docker/: alkali.dockerfile
docs/: requirements.txt
host-app/: .gitignore  CMakeLists.txt  Makefile  README.md  bpf.c  float-resnet.c  host-app  int8-resnet.c  label.py  normalize.py  pets_clsidx_to_labels.txt  run.sh  run_inference.sh  tf-app
host-app/libnvme/: nvme.c
host-app/src/: main.c  main.cpp  tflite.cpp  vendor.h
scripts/: copy_and_patch.py  download-hw-data.sh  format-sdcard.sh  nvme-bind.sh  nvme-read-wite-test.sh  nvme-read-write-test.sh  pcie-remove.sh  pcie-rescan.sh
(+11 files in other folders)
